Update README and .bib file

--- a/references.bib
+++ b/references.bib
@@ -9,3 +9,17 @@
 	note = {Google-Books-ID: gksCAAAAMAAJ},
 	address = {Milano}
 }
+
+@misc{rajeg_digitised_2025,
+	type = {Dataset},
+	title = {Digitised comparative word list of {Malay}, {Nias}, {Toba}-{Batak}, and {Enggano} in {Modigliani}’s “{L}’isola {Delle} {Donne}” from 1894},
+	url = {https://portal.sds.ox.ac.uk/articles/dataset/Digitised_comparative_word_list_of_Malay_Nias_Toba-Batak_and_Enggano_in_Modigliani_s_L_isola_Delle_Donne_from_1894/28330022/1},
+	doi = {10.25446/oxford.28330022.v1},
+	abstract = {Digitised comparative word list in Modigliani's "L'isola delle donne" from 1894. The word list captures Nias, Batak-Toba, Enggano, and Malay forms (with Italian reference). The Enggano forms are included in the EnoLEX database.For more detailed info, see the README page on GitHub, and for future updates, check the Releases page also on the source GitHub repository.},
+	language = {en},
+	urldate = {2025-02-02},
+	publisher = {University of Oxford},
+	author = {Rajeg, Gede Primahadi Wijaya},
+	month = feb,
+	year = {2025},
+}
